# edp-redy

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: on-push.yml  on-release.yml
src/edp/redy/: __init__.py  app.py
src/edp/redy/cli/: __init__.py  argparser.py  cli.py
src/edp/redy/logger/: logger.conf  logger.py
src/edp/redy/services/: api.py  auth.py  stream.py  wsmqtt.py
src/edp/redy/services/devices/: __init__.py  constants.py  service.py
src/edp/redy/services/devices/models/: devicemodel.py  modulesmodel.py
src/edp/redy/services/energy/: __init__.py  constants.py  service.py
src/edp/redy/services/energy/models/: predictionmodel.py
src/edp/redy/services/houses/: __init__.py  constants.py  service.py
src/edp/redy/services/houses/models/: __init__.py  contractedpowermodel.py  housemodel.py  tariffmodel.py
src/edp/redy/services/statevars/: __init__.py  constants.py  service.py
src/edp/redy/services/statevars/models/: __init__.py  statevarsmodel.py
tests/integration/: test_integration.py
tests/unit/: test_unit.py
