[metadata]
name = edp-redy-api
version = attr: edp.redy.version.__version__
author = Hugo Gomes
author_email = hgomes88@gmail.com
description = EDP Redy API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hgomes88/edp-redy
project_urls =
    Tracker = https://github.com/hgomes88/edp-redy/issues
    Download = https://pypi.org/project/edp-redy/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.7
include_package_data = True
install_requires =
    aiohttp>=3.8.1
    awscrt>=0.14.7
    awsiotsdk>=1.11.9
    boto3>=1.25.3
    boto3-stubs[cognito-identity]>=1.25.3
    dataclasses-json>=0.5.7
    warrant>=0.4.0

[options.data_files]

[options.packages.find]
where = src

[options.extras_require]
dev =
    twine==4.0.0
    build==0.7.0
    pytest==7.1.1
    pytest-asyncio==0.18.3
    pre-commit==2.18.1
    autopep8==1.6.0
    flake8==4.0.1
    mypy==0.942
    types-python-dateutil==2.8.19.2

[options.entry_points]
console_scripts =
    redy = edp.redy.cli.cli:main

[tool:pytest]
testpaths =
    tests/unit
    tests/integration
filterwarnings =
    ignore::DeprecationWarning


[mypy]
namespace_packages = True
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True

[pep8]
in_place = true
recursive = true
aggressive = 3

[flake8]
